infrastructure/networking/pi-hole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: pi-hole
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pihole.relyq.dev
    external-dns.alpha.kubernetes.io/dns: cloudflare
spec:
  hostnames:
    - pi-hole.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: pi-hole-pihole-web
          kind: Service
          port: 80
  parentRefs:
    - name: gateway-internal
      namespace: traefik-internal
      sectionName: websecure
